lab1/Test/L1-A-8-37.cmm
int gq1mK , wbY_mx 

;
int ;
int eLw ( struct {
  struct rdrj96fbGlM0Yt4s yThZX9FpHHp0 ;
  float G ;
}vuaeXkD7OG ) {
  int wFfVlEcWcztCN , Uool1KCQQCDmz [ 2069396560 ] 
    = Ghc_H8TuRyWCIHQzsLJ = WRBr8K2LnHwU9l || w7BZ >= 
    Zj * VebPqlk [ acwh7mGyU = QPfKp3njGedmX3W_w1zN && 
    iJHZBowxdYpxl3DRtR5x > uzMqzWMS + qnJM5beHm09H ( sBuMQ4nNRdBrjS78ve 
    , crnUx7 || EyA33OQg < rQ6PLnVtIkhcBcAjiRW [ dvA0Hs4yVitN_B 
    && eH8v_oqGGCmP1bb3HN <= PufKFFRtnBlFcJsG2Kud + ! 
    DyGvAGKu5Hj1O3c [ baRb || baDHIU8OfGo != ! JT ( ry3dmYf1OrI 
    == bNDnqE8A6EUNrIE * ! - ( bsS0JuyzfGyBnHz ) ) * mslbI_Es79gUoX5J3 
    . JP1Y ] ] && 149372075 . bY4LNPm5TenZhrAaH ) ] - 
    - De9KxY8vaoD8_Jg ( ) / ! 718338320.495466145 ;
}
struct zMHX75g Wa ( ) {
  yLr1Dfx9S70rvrsuXLpa ;
  LoLmrRQUs8gX7q ;
{
    int ZT ;
    if ( fIqzlADOLJ9r7 ) !=     EOC6dada25UcZ ;
else     while while ( iwFrzI8I7mr3C_ruoeF1 )     OeAcVoAfh 
      ;


>   }  if ( NKjkLGGzpIx8 )   return X0T0EpK ;

}
int ;
struct MYZNRSzT1 {
  int ldm8ml0ZvNu5VjlSvo3r ;
};
struct y3ohwgGud176DXwa ;
int hD7GjL1W ( int Ig1cWvVtc3 , int bXzZIIHjyX ) {
}
int ;
int E9NBcsYIUl ( ) {
  D ;
  ajSMXeEMM3Z ;
  FJjtYanhtL ;
  while ( cNK4usq8PNmU1jF3 )   TUkpMll5F0uPnK ;

}
int G3XaqEMzTvJAhcG ( ) >= {
  if ( UWPgnyuCEyWbCmeG9pKt )   if ( QDfH )   while 
    ( Pn6H3TpxzKAuF5av )   while ( LVhAQN1XMWYEFz )   while 
    ( iJTyIKMSaAHC9xoVw ) {
  }


else   while ( p )   if ( Vb4oEJE7KgGbm13kpggq ) {
    xJ_TK1s0fYWH9a70VbX ;
  }else   h5Zk_nUjZeI ;



else   RbeOLaUekieoonNp53rP ;

}
int ;
int ;
int ;
int WxwXdxZWea59Hv69O ( ) {
  BdyL7MKzPXuc2nHaZ ;
  Li5se8oqBNDmn ;
  yMx5y123Vsi8VglXjs ;
  if ( f2GOMIgUeiJzD0 )   while ( fm2yA3sEYWURtsDW_pR 
    ) {
    if ( sm0Fts9 )     WCZ0L138abt3dE ;
else     if ( rY6 )     Sr6tGAI ;


    while ( t )     iJPFHeGNMZ_9FsjiTjP ;

    jVOwL9vONqHd6jVH ;
    while ( RNlkFME )     rmA6Fw ;

  }
else {
  }
}
int vY9AI ( ) {
  fyIjH6K ;
}
